--- a/src/assets/sass/components/how-it-works/_partners.scss
+++ b/src/assets/sass/components/how-it-works/_partners.scss
@@ -1,32 +1,38 @@
 .partners {
-    @include spacing(padding, top bottom, 14rem);
+    padding-top: 14.25rem;
+    padding-bottom: 8.75rem;
+
+    .container {
+        position: relative;
+
+        &::before {
+            content: '';
+            position: absolute;
+            top: -14.25rem;
+            left: $container-gutter;
+            height: 24.25rem;
+            border-left: 1px solid $grey;
+        }
+    }
 
     .content-container {
         text-align: center;
-        max-width: 38.75rem;
+        max-width: 36.375rem;
         @include spacing(margin, left right, auto);
-        padding-bottom: 5.875rem;
+        padding-bottom: 4.875rem;
     }
 
     .partner-list {
         display: flex;
-        flex-wrap: wrap;
         align-items: center;
         justify-content: center;
-        @include spacing(margin, left right bottom, -$container-gutter);
+        @include spacing(margin, left right bottom, -2.5rem);
 
         .partner {
-            flex: 0 50%;
-            max-width: 50%;
-            @include spacing(padding, left right bottom, $container-gutter);
-
-            @media screen and (min-width: $tablet-breakpoint){
-                flex: 0 1 25%;
-                max-width: 25%;
-            }
+            @include spacing(padding, left right bottom, 2.5rem);
 
             .image-container {
-                max-width: 10.625rem;
+                max-width: 11.25rem;
                 @include spacing(margin, left right, auto);
             }
         }
