added base team section structure and styles

--- a/src/assets/sass/utils/_helpers.scss
+++ b/src/assets/sass/utils/_helpers.scss
@@ -46,6 +46,10 @@
     margin: 0 !important;
 }
 
+.invisible {
+    @include invisible();
+}
+
 /* Gradients */
 .yellow-gradient {
     @include gradient($orange, $yellow);
