--- a/src/assets/sass/components/our-story/_team.scss
+++ b/src/assets/sass/components/our-story/_team.scss
@@ -3,6 +3,35 @@ $team-gutter-size: 1.5rem;
 $team-max-width: 25rem + $team-gutter-size;
 
 .team {
+    position: relative;
+
+    &::before {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        right: -0.25rem;
+        width: 21.25rem;
+        height: 15.75rem;
+        background-image: url('./assets/images/large-dot-accent.png');
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-position: center;
+        z-index: -1;
+    }
+
+    &::after {
+        content: '';
+        position: absolute;
+        bottom: 10.5rem;
+        right: -1rem;
+        width: 6.875rem;
+        height: 7.125rem;
+        background-image: url('./assets/images/stripe-accent.png');
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+    }
+
     .team-list {
         display: flex;
         flex-wrap: wrap;
