--- a/src/assets/sass/components/layout/_footer.scss
+++ b/src/assets/sass/components/layout/_footer.scss
@@ -1,31 +1,57 @@
 footer {
-    display: flex;
-    min-height: 26.5rem;
     color: $white;
+
+    @media screen and (min-width: $tablet-breakpoint){
+        display: flex;
+        min-height: 26.5rem;
+    }
 
     .footer-cta,
     .footer-navigation {
-        display: flex;
-        padding: 1.5rem 0;
+        @media screen and (min-width: $tablet-breakpoint){
+            display: flex;
+            padding: 1.5rem 0;
+        }
     }
 
     .footer-cta {
-        flex: 1 1 55%;
-        justify-content: center;
         background-image: url('./assets/images/blue-pattern.png');
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
 
+        @media screen and (min-width: $tablet-breakpoint){
+            flex: 1 1 55%;
+            justify-content: center;
+        }
+
         .footer-content {
             display: flex;
             flex-direction: column;
-            max-width: 18.75rem;
+            align-items: center;
+            padding: 6.25rem 1rem 1.625rem;
+
+            @media screen and (min-width: $phone-breakpoint){
+                padding: 6.25rem 1.875rem 1.625rem;
+            }
+
+            @media screen and (min-width: $tablet-breakpoint){
+                align-items: flex-start;
+                max-width: 18.75rem;
+                padding: 0;
+            }
 
             .cta-container {
-                flex: 1 1 auto;
-                display: flex;
-                align-items: center;
+                max-width: 18rem;
+                padding-bottom: 6.25rem;
+
+                @media screen and (min-width: $tablet-breakpoint){
+                    flex: 1 1 auto;
+                    display: flex;
+                    align-items: center;
+                    max-width: 100%;
+                    padding-bottom: 0;
+                }
 
                 .cta-title {
                     @include set-font(primary, medium);
@@ -35,13 +61,18 @@ footer {
                 }
 
                 .micro-form {
-                    display: flex;
+                    @media screen and (min-width: $tablet-breakpoint){
+                        display: flex;
+                    }
 
                     input:not([type="submit"]) {
-                        flex: 1 1 auto;
-                        width: auto;
                         color: $primary-colour;
                         background-color: $white;
+
+                        @media screen and (min-width: $tablet-breakpoint){
+                            flex: 1 1 auto;
+                            width: auto;
+                        }
 
                         &::placeholder {
                             color: $primary-colour;
@@ -62,9 +93,14 @@ footer {
                         color: $white;
                         font-size: $body-font-size;
                         line-height: $body-line-height;
+                        width: 100%;
                         padding: 0.6875rem 1.125rem;
                         background-color: $primary-colour;
                         border: 0.125rem solid $white;
+
+                        @media screen and (min-width: $tablet-breakpoint){
+                            width: auto;
+                        }
                     }
                 }
             }
@@ -79,6 +115,10 @@ footer {
         background-repeat: no-repeat;
         background-size: 3.875rem 3.125rem;
         background-position: bottom 2.5rem right 2.5rem;
+
+        @media screen and (max-width: $tablet-breakpoint - 0.0625rem){
+            display: none;
+        }
 
         nav {
             padding-left: 20%;
