--- a/src/assets/sass/components/common/_simple-cta.scss
+++ b/src/assets/sass/components/common/_simple-cta.scss
@@ -1,6 +1,10 @@
 .simple-cta {
     text-align: center;
-    @include spacing(padding, top bottom, 6.875rem);
+    @include spacing(padding, top bottom, 6.25rem);
+
+    @media screen and (min-width: $tablet-breakpoint){
+        @include spacing(padding, top bottom, 6.875rem);
+    }
 
     h2 {
         color: $red;
