--- a/src/assets/sass/components/home/_features.scss
+++ b/src/assets/sass/components/home/_features.scss
@@ -1,3 +1,5 @@
+$feature-gutter: 0.625rem;
+
 .features {
     position: relative;
     margin-top: 14.75rem;
@@ -23,13 +25,13 @@
         .feature-list {
             display: flex;
             flex-wrap: wrap;
-            @include spacing(margin, left right, -0.625rem);
+            margin: -$feature-gutter;
 
             .feature {
                 flex: 0 1 calc(50% - 1.25rem);
                 max-width: calc(50% - 1.25rem);
                 padding: 2.5rem 1.25rem;
-                margin: 0.625rem;
+                margin: $feature-gutter;
                 border: 1px solid $grey;
                 background-color: $white;
 
