--- a/src/assets/sass/components/layout/_header.scss
+++ b/src/assets/sass/components/layout/_header.scss
@@ -115,6 +115,14 @@ header {
             transform: translateY(-25%);
             transition: top 0.3s ease, transform 0.3s ease;
         }
+
+        .button {
+            display: none;
+
+            @media screen and (min-width: $tablet-breakpoint){
+                display: block;
+            }
+        }
     }
 
     .logo {
@@ -146,7 +154,10 @@ header {
     #menuToggle {
         display: flex;
         align-items: center;
-        margin-right: 1.75rem;
+
+        @media screen and (min-width: $tablet-breakpoint){
+            margin-right: 1.75rem;
+        }
 
         &::before {
             content: "Menu";
