--- a/src/assets/sass/components/home/_leadContent.scss
+++ b/src/assets/sass/components/home/_leadContent.scss
@@ -1,10 +1,17 @@
 .lead-content {
-    @include spacing(padding, top bottom, 5rem);
+    padding-top: 2.25rem;
+    padding-bottom: 6.25rem;
+
+    @media screen and (min-width: $tablet-breakpoint){
+        @include spacing(padding, top bottom, 5rem);
+    }
 
     .content-container {
-        @include spacing(padding, top bottom, 6.25rem);
-        @include spacing(padding, left right, $container-gutter);
-        border-left: 1px solid $grey;
+        @media screen and (min-width: $tablet-breakpoint){
+            @include spacing(padding, top bottom, 6.25rem);
+            @include spacing(padding, left right, $container-gutter);
+            border-left: 1px solid $grey;
+        }
 
         p {
             text-align: center;
