--- a/src/assets/sass/components/our-story/_fast-facts.scss
+++ b/src/assets/sass/components/our-story/_fast-facts.scss
@@ -11,7 +11,7 @@
         @media screen and (min-width: $phone-breakpoint){
             display: flex;
             justify-content: space-between;
-            @include spacing(margin, left right, -$container-gutter);
+            @include spacing(margin, left right, -1rem);
         }
 
         .fact {
@@ -20,7 +20,7 @@
             @media screen and (min-width: $phone-breakpoint){
                 flex: 0 1 calc(100% / 3);
                 max-width: calc(100% / 3);
-                @include spacing(padding, left right, $container-gutter);
+                @include spacing(padding, left right, 1rem);
                 padding-bottom: 0;
             }
 
