updating mobile space values to be variables

--- a/src/assets/sass/base/_variables.scss
+++ b/src/assets/sass/base/_variables.scss
@@ -16,3 +16,5 @@ $global-font-size: 1rem;
 $body-font-size: 0.875rem;
 $body-line-height: 1.5rem;
 $header-height: 6.625rem;
+$mobile-section-space: 6.25rem;
+$mobile-block-space: 4rem;
