--- a/src/assets/sass/components/layout/_footer.scss
+++ b/src/assets/sass/components/layout/_footer.scss
@@ -29,7 +29,7 @@ footer {
             display: flex;
             flex-direction: column;
             align-items: center;
-            padding: 6.25rem 1rem 1.625rem;
+            padding: $mobile-section-space 1rem 1.625rem;
 
             @media screen and (min-width: $tablet-breakpoint){
                 align-items: flex-start;
@@ -39,7 +39,7 @@ footer {
 
             .cta-container {
                 max-width: 18rem;
-                padding-bottom: 6.25rem;
+                padding-bottom: $mobile-section-space;
 
                 @media screen and (min-width: $tablet-breakpoint){
                     flex: 1 1 auto;
