--- a/src/assets/sass/components/faq/_accordion-list.scss
+++ b/src/assets/sass/components/faq/_accordion-list.scss
@@ -13,5 +13,13 @@
             margin-bottom: 6rem;
             border-bottom: 1px solid $grey;
         }
+
+        h2 {
+            display: none;
+
+            @media screen and (min-width: $tablet-breakpoint){
+                display: block;
+            }
+        }
     }
 }
